<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="warehouse.fh_muenster.de.warehouse.CommissionArtikel"
    android:background="@mipmap/bg2">

    <TextView
        android:id="@+id/commission_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05"
        android:hint="Text"
        android:textColor="#454545" />

    <TextView
        android:id="@+id/commission_artikelAnzahl_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:hint="@string/commissionArtikel_table_head_Quantity" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/commission_artikelAnzahl_label">

        <TableLayout
            android:id="@+id/table_layout_commission_artikel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/weiter_btn"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/commission_artikelAnzahl_label"

            android:stretchColumns="*">

            <TableRow android:layout_marginBottom="10dp">

                <TextView
                    android:layout_column="0"
                    android:layout_weight="0"
                    android:width="100dp"
                    android:text="@string/commissionArtikel_table_head_itemCode" />

                <TextView
                    android:id="@+id/commission_artikel_artikel_code"
                    android:layout_column="0"
                    android:layout_weight="0"
                    android:width="100dp"

                    android:text="@string/commissionArtikel_table_head_input" />
            </TableRow>

            <TableRow android:layout_marginBottom="10dp">

                <TextView
                    android:layout_column="0"
                    android:layout_weight="0"
                    android:width="100dp"
                    android:text="@string/commissionArtikel_table_head_itemName" />

                <TextView
                    android:id="@+id/commission_artikel_artikel_name"
                    android:layout_column="0"
                    android:layout_weight="0"
                    android:width="100dp"

                    android:text="@string/commissionArtikel_table_head_input" />
            </TableRow>

            <TableRow android:layout_marginBottom="10dp">

                <TextView
                    android:layout_column="0"
                    android:layout_weight="0"
                    android:width="100dp"
                    android:text="@string/commissionArtikel_table_head_stockLocation" />

                <TextView
                    android:id="@+id/commission_artikel_artikel_storage"
                    android:layout_column="0"
                    android:layout_weight="0"
                    android:width="100dp"
                    android:text="@string/commissionArtikel_table_head_input" />
            </TableRow>

            <TableRow android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/comission_articel_soll_menge_label"
                    android:layout_column="0"
                    android:layout_weight="0"
                    android:width="100dp"
                    android:text="@string/commissionArtikel_table_head_targetQuantity" />

                <TextView
                    android:id="@+id/commission_artikel_artikel_soll"
                    android:layout_column="0"
                    android:layout_weight="0"
                    android:width="100dp"
                    android:text="@string/commissionArtikel_table_head_input" />
            </TableRow>

            <TableRow android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/commission_artikel_artikel_commession_label"
                    android:layout_column="0"
                    android:layout_weight="0"
                    android:width="100dp"
                    android:text="@string/commissionArtikel_table_head_commissionQuantity" />

                <TextView
                    android:id="@+id/commission_artikel_artikel_commession"
                    android:layout_column="0"
                    android:layout_weight="0"
                    android:width="100dp"
                    android:text="@string/commissionArtikel_table_head_input"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/commission_artikel_artikel_commession_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/commissionArtikel_table_head_commissionedQuantity"
                    android:inputType="number"></EditText>

            </TableRow>

            <TableRow android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/commission_artikel_fehlmengeMelden"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/commissionArtikel_table_head_underage"
                    style="?android:attr/borderlessButtonStyle"/>

            </TableRow>


        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/weiter_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/scrollView"
        android:text="@string/commissionArtikel_table_head_forward"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:id="@+id/commission_articel_scann_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weiter_btn"
        android:layout_alignEnd="@+id/weiter_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/weiter_btn"
        android:src="@android:drawable/ic_menu_camera"
        style="?android:attr/borderlessButtonStyle"/>

</RelativeLayout>