...
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="articleNr"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/stock_out_istMenge_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/stockOut_table_head_optional"
        android:inputType="number" />

    <Button
        android:id="@+id/stock_out_melden_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
...
