...
                android:text="Meine Kommissionen" />

            <Button
                android:id="@+id/menu_commissionOverview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Offene Kommissionen" />

            <Button
                android:id="@+id/mockMenue_lager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/scrollView2"
...
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/scrollView2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView2"
                android:layout_centerVertical="true"
                android:text="Logout" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>

